Bug 1477268 - Use window manager decorations instead of CSD mode on Unity, r=jhorak

Differential Revision: https://phabricator.services.mozilla.com/D4746